--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,7 +10,7 @@
     --primary-color: rgb(255, 255, 0)
     --secundary-color: orangered;
     --text-color-inverse: #ffffff;
-    --text-color: #ffff00;
+    --text-color: #000000;
     --navbar-shallow-color: #e5e5e5;
     --menu-mobile-background-color: #ffa600;
     --menu-mobile-background-secondary-color: #ff0000;
