--- a/scss/estilos.scss
+++ b/scss/estilos.scss
@@ -1,6 +1,38 @@
 @import 'variables';
 
 @import 'reset';
+
+* {
+  margin: 0;
+  padding: 0;
+  background-color: var(--theme-color);
+}
+
+:root {
+  --theme-color: #ffa500;
+  --primary-color: rgb(255, 255, 0)
+  --secundary-color: orangered;
+  --text-color-inverse: #ffffff;
+  --text-color: #000000;
+  --navbar-shallow-color: #e5e5e5;
+  --menu-mobile-background-color: #ffa600;
+  --menu-mobile-background-secondary-color: #ff0000;
+}
+
+body {
+  color: var(--text-color);
+  font-family: "sans-serif";
+}
+
+a {
+  text-decoration: none;
+  color: var(--text-color);
+}
+
+.h3 {
+  font-size: 100px;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -323,7 +355,7 @@ a {
   height: 270px;
 }
 
-@media (max-width: 950px) {
+@media (max-width: 950px) { 
   .menu {
     flex-direction: column;
     position: fixed;
@@ -413,7 +445,31 @@ a {
     width: 150px;
     height: 150px;
   }
+
+  .Multimedia {
+    margin-left: 50px;
+  }
+
+    .carousel-control-prev img,
+  .carousel-control-next img {
+    width: 20px; /* Ancho deseado */
+    height: 20px; /* Alto deseado */
+  }
+  .video {
+    width: 320px;
+    height: 180px;
+  }
+
+  .video2 {
+    width: 320px;
+    height: 180px;
+  }
+
+  .TIPOS_DE_CONTACTOS img {
+    height: 50px;
+    width: 50px;
+  }
+
+
 }
-
-
 /*# sourceMappingURL=estilos.css.map */
