--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,14 +1,8 @@
 @charset "UTF-8";
-* {
-  margin: 0;
-  padding: 0;
-  background-color: var(--theme-color);
-}
-
 :root {
   --theme-color: #ffa500;
-  --primary-color: rgb(255, 255, 0)
-  --secundary-color: orangered;
+  --primary-color: rgb(255, 255, 0);
+  --secondary-color: orangered;
   --text-color-inverse: #ffffff;
   --text-color: #000000;
   --navbar-shallow-color: #e5e5e5;
@@ -16,111 +10,9 @@
   --menu-mobile-background-secondary-color: #ff0000;
 }
 
-body {
-  color: var(--text-color);
-  font-family: "sans-serif";
-}
-
-a {
-  text-decoration: none;
-  color: var(--text-color);
-}
-
-.h3 {
-  font-size: 100px;
-}
-
 * {
   margin: 0;
   padding: 0;
-  background-color: var(--theme-color);
-}
-
-:root {
-  --theme-color: #ffa500;
-  --primary-color: rgb(255, 255, 0)
-  --secundary-color: orangered;
-  --text-color-inverse: #ffffff;
-  --text-color: #000000;
-  --navbar-shallow-color: #e5e5e5;
-  --menu-mobile-background-color: #ffa600;
-  --menu-mobile-background-secondary-color: #ff0000;
-}
-
-body {
-  color: var(--text-color);
-  font-family: "sans-serif";
-}
-
-a {
-  text-decoration: none;
-  color: var(--text-color);
-}
-
-.h3 {
-  font-size: 100px;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  background-color: var(--theme-color);
-}
-
-:root {
-  --theme-color: #ffa500;
-  --primary-color: rgb(255, 255, 0)
-  --secundary-color: orangered;
-  --text-color-inverse: #ffffff;
-  --text-color: #000000;
-  --navbar-shallow-color: #e5e5e5;
-  --menu-mobile-background-color: #ffa600;
-  --menu-mobile-background-secondary-color: #ff0000;
-}
-
-body {
-  color: var(--text-color);
-  font-family: "sans-serif";
-}
-
-a {
-  text-decoration: none;
-  color: var(--text-color);
-}
-
-.h3 {
-  font-size: 100px;
-}
-
-* {
-  margin: 0;
-  padding: 0;
-  background-color: var(--theme-color);
-}
-
-:root {
-  --theme-color: #ffa500;
-  --primary-color: rgb(255, 255, 0)
-  --secundary-color: orangered;
-  --text-color-inverse: #ffffff;
-  --text-color: #000000;
-  --navbar-shallow-color: #e5e5e5;
-  --menu-mobile-background-color: #ffa600;
-  --menu-mobile-background-secondary-color: #ff0000;
-}
-
-body {
-  color: var(--text-color);
-  font-family: "sans-serif";
-}
-
-a {
-  text-decoration: none;
-  color: var(--text-color);
-}
-
-.h3 {
-  font-size: 100px;
 }
 
 .topheader {
@@ -165,7 +57,7 @@ a {
 }
 
 .menu a {
-  color: var(--text-color);
+  color: #000000;
   font-size: 18px;
   font-weight: 500;
   line-height: 10px;
@@ -186,7 +78,7 @@ a {
 
 .menu a::after {
   content: "";
-  background-color: var(--secundary-color);
+  background-color: red;
   position: absolute;
   left: 0;
   top: calc(100% + 4px);
@@ -205,14 +97,29 @@ a {
   color: var(--primary-color);
 }
 
-.footer {
-  background-color: orange;
-  margin-top: 20px;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  text-align: left;
-  margin-bottom: 5px;
+.topheader .logo img {
+  width: 50px;
+  height: auto;
+}
+
+.body {
+  color: #000000;
+  font-family: "sans-serif";
+}
+
+a {
+  text-decoration: none;
+  color: #000000;
+}
+
+.h3 {
+  font-size: 100px;
+}
+
+.main {
+  background-color: orange; /* Establece el fondo del main */
+  background-size: cover;
+  background-position: center;
 }
 
 .productos {
@@ -251,22 +158,6 @@ a {
   margin-left: 10px;
   margin-top: 20px;
   margin-bottom: 20px;
-}
-
-.topheader .logo img {
-  width: 50px;
-  height: auto;
-}
-
-.footer .rayologo img {
-  width: 50px;
-  height: auto;
-}
-
-.redes img,
-.menu-footer .logo img {
-  width: 50px;
-  height: auto;
 }
 
 .TIPOS_DE_CONTACTOS img {
@@ -331,19 +222,6 @@ a {
   padding: 10px; /* Espaciado interno del caption */
 }
 
-.carousel-control-prev,
-.carousel-control-next {
-  width: 35px; /* Ajusta el tamaño de los botones de control */
-  top: 50%; /* Coloca los botones en la mitad superior */
-}
-
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
-  background-image: none; /* Elimina el icono predeterminado */
-  font-size: 24px; /* Tamaño del icono de control */
-  color: #fff; /* Color del icono de control */
-}
-
 .video {
   width: 500px;
   height: 280px;
@@ -381,6 +259,45 @@ a {
 
 .pikachu_is_evolving {
   height: 270px;
+}
+
+.footer {
+  background-image: linear-gradient(to top, #ff0000, #ff3a00, #ff5400, #ff6900, #ff7b00, #ff8b00, #ff9a00, #ffa900, #ffbb00, #ffce00, #ffe000, #fff300);
+  background-color: #ffa500;
+  margin-top: 20px;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  text-align: left;
+  margin-bottom: 0px;
+}
+
+.colorfuera {
+  background-color: #ffa500;
+}
+
+.footer .rayologo img {
+  width: 50px;
+  height: auto;
+}
+
+.redes img,
+.menu-footer .logo img {
+  width: 50px;
+  height: auto;
+}
+
+.rayo-logo {
+  height: 10px;
+  width: 10px;
+}
+
+.footer .container {
+  background-color: transparent; /* Hace que el fondo del container del footer sea transparente */
+}
+
+.footer .container * {
+  background-color: transparent; /* Hace que el fondo de todos los elementos dentro del container del footer sea transparente */
 }
 
 @media (max-width: 950px) {
