--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -114,7 +114,44 @@
       height: 50px;
       width: 50px;
     }
-  
-  
+    .pikachuraichugba img {
+        height: 200px;
+        width: 350px;
+    }
+    .pikachuraichuanime img {
+        height: 200px;
+        width: 350px;
+    }
+
+    .pikatv video {
+        height: 200px;
+        width: 360px;
+    }
+
+    .pikatv2 video {
+        height: 200px;
+        width: 300px;
+    }
+
+    .pikatv3 video {
+        height: 20px;
+        width: 30px;
+    }
+
+    .pikachueevee img {
+        height: 200px;
+        width: 380px;
+    }
+    .pikachueevee2 img {
+        height: 200px;
+        width: 300px;
+    }
+    .margen-arriba {
+        margin-top: 30px;
+      }
+
+    .margen-arriba2 {
+        margin-top: 0px;
+      }
   }
   /*# sourceMappingURL=estilos.css.map */
