--- a/css/estilos.css
+++ b/css/estilos.css
@@ -358,13 +358,24 @@ a {
     background: none;
     cursor: pointer;
   }
+  .open-menu img {
+    height: 50px;
+    width: 50px;
+  }
   .close-menu {
     align-self: flex-end;
     padding: 20px 15px;
   }
+  .close-menu img {
+    height: 50px;
+    width: 50px;
+  }
   .menu_opened {
     opacity: 1;
     pointer-events: all;
+  }
+  .logo {
+    padding-left: 170px;
   }
   .Multimedia img {
     margin-left: 50px;
