--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -153,6 +153,11 @@
   .margen-arriba2 {
     margin-top: 0px;
   }
+
+  .margen-arriba3 {
+    margin-top: 10px;
+  }
+
   .margen-arriba4 {
     margin-top: 10px;
   }
