--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -158,10 +158,11 @@
     margin-top: 50px;
   }
 
-  .margen-arriba4 {
+  .container_repuesto {
     margin-top: 90px;
   }
 }
+
 
 
 /*# sourceMappingURL=estilos.css.map */
