--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -158,11 +158,10 @@
     margin-top: 50px;
   }
 
-  .container_repuesto {
-    margin-top: 90px;
+  .margen-arriba4 {
+    margin-top: 70px;
   }
 }
-
 
 
 /*# sourceMappingURL=estilos.css.map */
