--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -169,5 +169,10 @@
     .margen-arriba2 {
         margin-top: 0px;
       }
+
+      .pikachu_is_evolving {
+        height: 200px;
+        width: 250px;
+      }
   }
   /*# sourceMappingURL=estilos.css.map */
