PreEntrega4- final update

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -496,6 +496,16 @@ button:hover {
   .margen-arriba2 {
     margin-top: 0px;
   }
+
+  .bienvenida {
+    margin-top: 100px;
+    margin-left: 0px;
+  }
+  
+  .bienvenida2 {
+    margin-top: 100px;
+    margin-left: 0px;
+  }
 }
 
 
