--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -169,5 +169,15 @@
     .margen-arriba2 {
         margin-top: 0px;
       }
+      
+      .bienvenida {
+        margin-top: 100px;
+        margin-left: 0px;
+      }
+      
+      .bienvenida2 {
+        margin-top: 100px;
+        margin-left: 0px;
+      }
   }
   /*# sourceMappingURL=estilos.css.map */
